test/blackbox-test/test-cases/plt_using_error.expected
test-cases/plt_using_error.erl:6: Type error: type mismatch;
  found   : {{any(), any(), any()}, {any(), 'hoge', any()}}
  required: {{number(), number(), number()}, {number(), number(), number()}}
there is no solution that satisfies subtype constraints
